--- a/style.css
+++ b/style.css
@@ -1,283 +1,304 @@
-    body {
-        display: initial;
+/* General */
+
+body {
+    display: initial;
+}
+
+header,
+footer {
+    background-color: #ccc;
+    width: 100%;
+    position: fixed;
+    z-index: 1000;
+}
+
+address,
+.site-name {
+    display: inline-block;
+    margin-left: 10px;
+}
+
+a {
+    color: #000;
+}
+
+/* Header */
+
+header {
+    top: 0;
+}
+
+nav {  /* Theme Navigation */
+    position: absolute;
+    top: 25px;
+    right: 10px;
+}
+
+.site-name {
+    display: inline-block;
+    margin-left: 10px;
+}
+
+/* Title section */
+
+.title {
+    font-size: 2.1rem;
+    margin-top: 100px;
+    margin-bottom: 40px;
+    text-transform: uppercase;
+    text-align: center;
+    align-items: center;
+    opacity: 0.1;
+    transform: translate(0) scale(1);
+    animation: siteNameAnimation 2s infinite;
+}
+
+/* Gallery section */
+
+.gallery {
+    display: grid;
+    width: calc(100%-20px);
+    grid-template-columns: repeat(4, 1fr);
+    grid-auto-rows: 200px;
+    grid-gap: 10px 10px;
+    grid-auto-flow: dense;
+    margin: 0 10px;
+}
+
+figure {
+    display: block;
+    margin-block-start: 0em;
+    margin-block-end: 0em;
+    margin-inline-start: 0px;
+    margin-inline-end: 0px;
+}
+
+figure img {
+    width: 100%;
+    height: 100%;
+    cursor: pointer;
+}
+
+/* Footer */
+
+footer {
+    bottom: 0;
+}
+
+footer p {
+    display: inline-block;
+    margin-left: 20px;
+}
+
+.icons {
+    position: absolute;
+    top: 15px;
+    right: 10px;
+}
+
+.icons img {
+    width: 20px;
+    height: 20px;
+    margin-left: 2px;
+    margin-right: 2px;
+}
+
+address {
+    display: inline-block;
+    margin-left: 10px;
+}
+
+/* Themes */
+
+.dark-theme {
+    background: #000;
+}
+
+.dark-theme header,
+.dark-theme footer {
+    background-color: #000;
+    color: #ffffff;
+    border: 2px solid darkblue;
+}
+
+.dark-theme a,
+.dark-theme .title {
+    color: #ffffff;
+}
+
+.dark-theme .icons {
+    filter: invert(100%);
+}
+
+.dark-theme .modal-body {
+    background-color: #000;
+}
+
+.light-theme,
+.light-theme .modal-body {
+    background: #ffffff;
+}
+
+.light-theme header,
+.light-theme footer {
+    background-color: #ffffff;
+    color: #000;
+    border: 2px solid #000;
+}
+
+.light-theme .icons {
+    filter: inherit;
+}
+
+.light-theme a,
+.light-theme .title {
+    color: #000;
+}
+
+.backendless-theme,
+.backendless-theme .modal-body {
+    background: linear-gradient(#f70000, #f89200, #f8f501, #038f00, #0168f8, #a200f7);
+    color: #1a9790;
+}
+
+.backendless-theme header,
+.backendless-theme footer {
+    background-color: #ccc;
+    border: 2px solid #1a9790;
+}
+
+.backendless-theme .icons {
+    filter: invert(48%) sepia(13%) saturate(3207%) hue-rotate(130deg) brightness(95%) contrast(80%);
+}
+
+.backendless-theme a,
+.backendless-theme .title {
+    color: #1a9790;
+}
+
+/* Modal window */
+
+aside {
+    position: fixed;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.3);
+    opacity: 0;
+    visibility: hidden;
+}
+
+.show-modal {
+    opacity: 1;
+    visibility: visible;
+    transform: scale(1.0);
+}
+
+.modal-body {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background-color: #ffffff;
+    padding: 1rem 1.5rem;
+    width: 24rem;
+    border-radius: 0.5rem;
+}
+
+.modal-body-image {
+    width: 100%;
+    height: 60%;
+}
+
+.close-button {
+    float: right;
+    width: 1.5rem;
+    line-height: 1.5rem;
+    text-align: center;
+    cursor: pointer;
+    border-radius: 0.25rem;
+    background-color: lightgray;
+    margin-bottom: 10px;
+}
+
+/* Animation */
+
+@keyframes siteNameAnimation {
+    20% {
+        opacity: 0.3;
     }
-    
-    .container {
-        display: grid;
-        width: 100%;
-        grid-template-columns: repeat(4, 1fr);
+    40% {
+        opacity: 0.5;
+    }
+    50% {
+        opacity: 0.6;
+    }
+    60% {
+        opacity: 0.5;
+    }
+    80% {
+        opacity: 0.3;
+    }
+}
+
+/* Adaptive styles */
+
+@media only screen and (max-width: 640px) {
+    .nav-select {
+        visibility: visible;
+    }
+    .nav-button,
+    .nav-input {
+        visibility: hidden;
+    }
+    .gallery {
+        grid-template-columns: repeat(3, 1fr);
         grid-auto-rows: 200px;
-        grid-gap: 10px 10px;
-        grid-auto-flow: dense;
     }
-    
-    .container img {
-        width: 100%;
-        height: 100%;
-        cursor: pointer;
+    figure:nth-child(4n+1) {
+        grid-column: span 3;
+        grid-row: span 2;
     }
-    
-    .picture:nth-child(12n+1),
-    .picture:nth-child(12n+10) {
+    figure:nth-child(10n+10),
+    figure:nth-child(22n+22) {
+        grid-column: span 1;
+        grid-row: span 1;
+    }
+    address, 
+    .icons {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        position: static;
+    }
+}
+
+@media only screen and (min-width: 641px) and (max-width: 1080px) {
+    .nav-button {
+        visibility: visible;
+    }
+    .nav-select,
+    .nav-input {
+        visibility: hidden;
+    }
+    figure:nth-child(3n+1) {
+        grid-column: auto /span 3;
+        grid-row: auto /span 2;
+    }
+}
+
+@media only screen and (min-width: 1081px) {
+    .nav-input {
+        visibility: visible;
+    }
+    .nav-button,
+    .nav-select {
+        visibility: hidden;
+    }
+    figure:nth-child(12n+1),
+    figure:nth-child(12n+10) {
         grid-column: auto /span 3;
         grid-row: auto /span 3;
     }
-    
-    header,
-    footer {
-        background-color: #ccc;
-        width: 100%;
-        position: fixed;
-        z-index: 1000;
-    }
-    
-    header {
-        top: 0;
-    }
-    
-    footer {
-        bottom: 0;
-    }
-    
-    .title,
-    .email {
-        display: inline-block;
-        margin-left: 10px;
-    }
-    
-    .nav {
-        position: absolute;
-        top: 25px;
-        right: 20px;
-    }
-    
-    .icon {
-        position: absolute;
-        top: 15px;
-        right: 10px;
-    }
-    
-    p {
-        display: inline-block;
-        margin-left: 20px;
-    }
-    
-    a {
-        color: #000;
-    }
-    
-    .icon img {
-        width: 20px;
-        height: 20px;
-        margin-left: 2px;
-        margin-right: 2px;
-    }
-    
-    .modal {
-        position: fixed;
-        left: 0;
-        top: 0;
-        width: 100%;
-        height: 100%;
-        background-color: rgba(0, 0, 0, 0.3);
-        opacity: 0;
-        visibility: hidden;
-    }
-    
-    .modal-body {
-        position: absolute;
-        top: 50%;
-        left: 50%;
-        transform: translate(-50%, -50%);
-        background-color: #ffffff;
-        padding: 1rem 1.5rem;
-        width: 24rem;
-        border-radius: 0.5rem;
-    }
-    
-    .modal-body-image {
-        width: 100%;
-        height: 60%;
-    }
-    
-    .close-button {
-        float: right;
-        width: 1.5rem;
-        line-height: 1.5rem;
-        text-align: center;
-        cursor: pointer;
-        border-radius: 0.25rem;
-        background-color: lightgray;
-    }
-    
-    .show-modal {
-        opacity: 1;
-        visibility: visible;
-        transform: scale(1.0);
-    }
-    
-    .dark-theme {
-        background: #000;
-    }
-    
-    .dark-theme header,
-    .dark-theme footer {
-        background-color: #000;
-        color: #ffffff;
-        border: 2px solid darkblue;
-    }
-    
-    .dark-theme a,
-    .dark-theme .site-name span {
-        color: #ffffff;
-    }
-    
-    .dark-theme .icon {
-        filter: invert(100%);
-    }
-    
-    .dark-theme .modal-body {
-        background-color: #000;
-    }
-    
-    .light-theme,
-    .light-theme .modal-body {
-        background: #ffffff;
-    }
-    
-    .light-theme header,
-    .light-theme footer {
-        background-color: #ffffff;
-        color: #000;
-        border: 2px solid #000;
-    }
-    
-    .light-theme .icon {
-        filter: inherit;
-    }
-    
-    .light-theme a,
-    .light-theme .site-name span {
-        color: #000;
-    }
-    
-    .backendless-theme,
-    .backendless-theme .modal-body {
-        background: linear-gradient(#f70000, #f89200, #f8f501, #038f00, #0168f8, #a200f7);
-        color: #1a9790;
-    }
-    
-    .backendless-theme header,
-    .backendless-theme footer {
-        background-color: #ccc;
-        border: 2px solid #1a9790;
-    }
-    
-    .backendless-theme .icon {
-        filter: invert(48%) sepia(13%) saturate(3207%) hue-rotate(130deg) brightness(95%) contrast(80%);
-    }
-    
-    .backendless-theme a,
-    .backendless-theme .site-name span {
-        color: #1a9790;
-    }
-    
-    .site-name {
-        font-size: 3rem;
-        margin-top: 100px;
-        margin-bottom: 40px;
-        text-transform: uppercase;
-        text-align: center;
-        align-items: center;
-    }
-    
-    .site-name span {
-        opacity: 0;
-        transform: translate(-150px, 0) scale(.3);
-        animation: siteNameAnimation 4s infinite;
-    }
-    
-    @keyframes siteNameAnimation {
-        25% {
-            transform: translate(50px, 0) scale(1);
-            opacity: 1;
-        }
-        50% {
-            transform: translate(0) scale(1);
-            opacity: 0;
-        }
-        75% {
-            transform: translate(0) scale(1);
-            opacity: 1;
-        }
-    }
-    
-    @media only screen and (min-width: 320px) and (max-width: 640px) {
-        .nav-select {
-            visibility: visible;
-        }
-        .nav-button,
-        .nav-input {
-            visibility: hidden;
-        }
-        .title {
-            display: inline-block;
-        }
-        .nav {
-            position: absolute;
-            top: 25px;
-            right: 0;
-        }
-        .container {
-            grid-template-columns: repeat(3, 1fr);
-            grid-auto-rows: 200px;
-        }
-        .picture:nth-child(4n+1) {
-            grid-column: span 3;
-            grid-row: span 2;
-        }
-        .picture:nth-child(10n+10),
-        .picture:nth-child(22n+22) {
-            grid-column: span 1;
-            grid-row: span 1;
-        }
-        .icon,
-        .email {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            position: static;
-        }
-    }
-    
-    @media only screen and (min-width: 640px) and (max-width: 1080px) {
-        .nav-button {
-            visibility: visible;
-        }
-        .nav-select,
-        .nav-input {
-            visibility: hidden;
-        }
-        .title {
-            display: inline-block;
-        }
-        .nav {
-            position: absolute;
-            top: 25px;
-            right: 0;
-        }
-        .picture:nth-child(3n+1) {
-            grid-column: auto /span 3;
-            grid-row: auto /span 2;
-        }
-    }
-    
-    @media only screen and (min-width: 1080px) {
-        .nav-input {
-            visibility: visible;
-        }
-        .nav-button,
-        .nav-select {
-            visibility: hidden;
-        }
-    }
+}
