--- a/style.css
+++ b/style.css
@@ -22,13 +22,15 @@ a {
     color: #000;
 }
 
+
 /* Header */
 
 header {
     top: 0;
 }
 
-nav {  /* Theme Navigation */
+nav {
+    /* Theme Navigation */
     position: absolute;
     top: 25px;
     right: 10px;
@@ -38,6 +40,7 @@ nav {  /* Theme Navigation */
     display: inline-block;
     margin-left: 10px;
 }
+
 
 /* Title section */
 
@@ -52,6 +55,7 @@ nav {  /* Theme Navigation */
     transform: translate(0) scale(1);
     animation: siteNameAnimation 2s infinite;
 }
+
 
 /* Gallery section */
 
@@ -78,6 +82,7 @@ figure img {
     height: 100%;
     cursor: pointer;
 }
+
 
 /* Footer */
 
@@ -108,6 +113,7 @@ address {
     margin-left: 10px;
 }
 
+
 /* Themes */
 
 .dark-theme {
@@ -131,7 +137,7 @@ address {
 }
 
 .dark-theme .modal-body {
-    background-color: #000;
+    background: #000;
 }
 
 .light-theme,
@@ -175,6 +181,7 @@ address {
 .backendless-theme .title {
     color: #1a9790;
 }
+
 
 /* Modal window */
 
@@ -222,6 +229,7 @@ aside {
     margin-bottom: 10px;
 }
 
+
 /* Animation */
 
 @keyframes siteNameAnimation {
@@ -241,6 +249,7 @@ aside {
         opacity: 0.3;
     }
 }
+
 
 /* Adaptive styles */
 
@@ -265,7 +274,7 @@ aside {
         grid-column: span 1;
         grid-row: span 1;
     }
-    address, 
+    address,
     .icons {
         display: flex;
         justify-content: center;
