--- a/style.css
+++ b/style.css
@@ -128,7 +128,9 @@ address {
 }
 
 .dark-theme a,
-.dark-theme .title {
+.dark-theme .title,
+.dark-theme .gallery {
+    background: #000;
     color: #ffffff;
 }
 
@@ -157,7 +159,9 @@ address {
 }
 
 .light-theme a,
-.light-theme .title {
+.light-theme .title,
+.light-theme .gallery {
+    background: #ffffff;
     color: #000;
 }
 
@@ -178,7 +182,9 @@ address {
 }
 
 .backendless-theme a,
-.backendless-theme .title {
+.backendless-theme .title,
+.backendless-theme .gallery {
+    background: linear-gradient(#f70000, #f89200, #f8f501, #038f00, #0168f8, #a200f7);
     color: #1a9790;
 }
 
